@@ -16,7 +16,9 @@ setting since version 1.2.0. If you have it on, turn it '''off''' if you can.
 * (bug 30774) mediawiki.html: Add support for numbers and booleans in the
   attribute values and element contents.
 * (bug 32473) [[Special:PasswordReset]] can not be used on private wiki
-
+* (bug 32843) DBA cache broken
+* (bug 328786) Backward compatibility for extension using 1.17's Database::newFromType()
+* fix stack trace when using WhatLinksHere on a Media: file
 
 == MediaWiki 1.18 ==
 2011-11-24
